# easypdb

./: README.md  pyproject.toml
easypdb/: __init__.py  config.py
tests/: test_easypdb.py
